--- a/components/pages/HomePage.module.css
+++ b/components/pages/HomePage.module.css
@@ -119,7 +119,7 @@
   width: auto;
   height: auto;
   max-width: 100%;
-  font-size: var(--token-UXPBeNJ4rrVx);
+  font-size: 24px;
   font-weight: 600;
   font-family: "Satoshi";
 }
@@ -132,7 +132,7 @@
   flex-direction: row;
 }
 .slotTargetChildren {
-  font-size: var(--token-UXPBeNJ4rrVx);
+  font-size: 24px;
   font-weight: 700;
   color: var(--token-FTu687H3gT3S);
   font-family: "Satoshi";
@@ -154,7 +154,7 @@
   width: 100%;
   height: auto;
   max-width: 100%;
-  font-size: var(--token-BlA-iDkaAWvO);
+  font-size: 16px;
   font-family: "Satoshi";
   font-weight: 500;
   min-width: 0;
@@ -222,7 +222,7 @@
   width: 100%;
   height: auto;
   max-width: 100%;
-  font-size: var(--token-KlrAoGIT1za7);
+  font-size: 30px;
   font-weight: 700;
   font-family: "Mont";
   color: var(--token-b4D6G1fNo7IC);
@@ -238,7 +238,7 @@
   justify-content: flex-start;
   align-items: center;
   background: #fafafa;
-  row-gap: var(--token-5qBYYrKVDrlB);
+  row-gap: 12px;
   min-width: 0;
   border-radius: 16px;
   padding: 20px;
@@ -253,7 +253,7 @@
   justify-content: flex-start;
   align-items: center;
   background: none;
-  row-gap: var(--token-5qBYYrKVDrlB);
+  row-gap: 12px;
   min-width: 0;
   border-radius: 16px;
 }
@@ -281,6 +281,7 @@
   filter: blur(4px);
   min-width: 0;
   padding: 0px;
+  row-gap: 12px;
 }
 .metricCard__cbTb:global(.__wab_instance) {
   max-width: 100%;
@@ -338,7 +339,7 @@
   width: auto;
   height: auto;
   max-width: 100%;
-  font-size: var(--token-KlrAoGIT1za7);
+  font-size: 30px;
   font-weight: 700;
   font-family: "Mont";
   color: var(--token-b4D6G1fNo7IC);
@@ -348,7 +349,7 @@
   width: auto;
   height: auto;
   max-width: 100%;
-  font-size: var(--token-B10hUni6jzpI);
+  font-size: 20px;
   font-weight: 700;
   font-family: "Mont";
   color: var(--token-FTu687H3gT3S);
@@ -363,7 +364,7 @@
   justify-content: flex-start;
   align-items: center;
   background: #fafafa;
-  row-gap: var(--token-5qBYYrKVDrlB);
+  row-gap: 12px;
   min-width: 0;
   border-radius: 16px;
   padding: 20px;
@@ -378,7 +379,7 @@
   justify-content: flex-start;
   align-items: center;
   background: none;
-  row-gap: var(--token-5qBYYrKVDrlB);
+  row-gap: 12px;
   filter: blur(4px);
   min-width: 0;
   border-radius: 16px;
