--- a/components/ui/MenuNavigation/MenuNavigation.module.css
+++ b/components/ui/MenuNavigation/MenuNavigation.module.css
@@ -175,26 +175,21 @@
 }
 .freeBox__cVk2 {
   position: relative;
-  width: 100%;
+  width: auto;
   height: auto;
-  max-width: 50px;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
-  min-width: 100px;
+  min-width: auto;
   flex-shrink: 0;
   column-gap: 0px;
   justify-content: flex-end;
   align-items: center;
+  white-space: nowrap;
 }
 .slotTargetChildren3 {
   font-weight: 600;
-  font-size: var(--token-7z5Kw5B89TZR);
-}
-.text__wg9Jo {
-  position: relative;
-  width: auto;
-  height: auto;
-  max-width: 100%;
+  font-size: 14px;
   font-family: "Satoshi";
   color: var(--token-WOsv3R6KKLJw);
 }
@@ -202,6 +197,9 @@
   font-style: italic;
   font-family: "Satoshi";
   color: var(--token-WOsv3R6KKLJw);
+}
+.accountIcon {
+  cursor: pointer;
 }
 .logoutButton:global(.__wab_instance):global(.__wab_instance) {
   max-width: 100%;
@@ -294,6 +292,8 @@
   z-index: 1;
   min-width: 0;
   padding: 0px;
+  border-bottom: 1px solid var(--token-bGw1ZBUIaR08);
+  background: #ffffff;
 }
 .freeBoxdashboardOpen___8OAdUkDcoZ {
   max-width: var(--token-eC7sN0TdrMwT);
